--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "rm -rf docs && next build && mv out docs",
     "start": "next start",
     "lint": "eslint"
   },
